2014-04-03  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_soap_parlayx.c: re-order header includes and remove comment
      block. NLC.
    * soap/env_header.h: add SOAP_ENV__Header struct for Parlay/X modules to
      the abstracted SOAP env library build.
    * soap/Makefile.in: change the SOAP env build and incarnation of wsseapi.[ch]
      inside the soap/service/parlayx implementation.
    * soap/service/parlayx/parlayx_sms_send_service_2_1_wrapper.h: removed, 
      moved the SOAP_ENV__Header struct definition to the abstracted SOAP env
      layer.
    This patchset fixes possible segfaults for additional SOAP/XML modules, when
    the SOAP_ENV__Header processing is taken from Parlay/X. This needs to be 
    taken from the abstracted SOAP env library.
      
2014-04-01  Stipe Tolj  <stolj at kannel.org>
    * doc/examples/dlr-redis.conf, doc/userguide.xml: Patchset fixes bug #689
      reported by Lorenzo Bagni.
      
2014-04-01  Stipe Tolj  <stolj at kannel.org>
    * gwlib/dbpool_redis.c: add handling of REDIS_REPLY_INTEGER in function
      redis_select().
    * gw/dlr_redis.c: re-write the DLR messages counter retrieving. We can't
      use an INCR/DECR counter approach, since TTL'ed expiration won't correct
      these values and we end up in inaccurate counters. Rather use the DBSIZE
      command on the specific database used by redis, this is unique then. This
      is also more performative, since we don't need to update the counter 
      every time we change a key.
    
2014-04-01  Stipe Tolj  <stolj at kannel.org>
    * gwlib/dbpool_redis.c: fix typo for REDIS_DEBUG macro. Add more possible
      debug output. NLC.
    * gw/dlr_redis.c: DLR-URLs need to be URL-[en|de]coded for redis and
      '%' needs to be escaped, since hiredis uses this inside redisCommand().
      This patchset fixes bug #690. Thanks to Lorenzo Bagni for reporting.
      [Msg-Id: <CAD8hAHGx520vLKnt0GOUhDRUPsoz14f=J4RO0PnH1dG3yUSNwQ@mail.gmail.com>]
      