@@ -1157,7 +1157,7 @@ static void url_result_thread(void *arg)
             octstr_destroy(type);
         } else if (max_http_retries > retries) {
             item = gw_malloc(sizeof(TimerItem));
-            item->timer = gw_timer_create(timerset, smsbox_http_requests);
+            item->timer = gw_timer_create(timerset, smsbox_http_requests, NULL);
             item->id = remember_receiver(msg, trans, method, req_url,
                                          req_headers, req_body, retries);
             gw_timer_elapsed_start(item->timer, http_queue_delay, item);
